resolve contrast issue in .details th results page where dark grey was the default background - change to slightly darker grey. *Accessibility

--- a/modules/xerte/parent_templates/Nottingham/models_html5/results.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/results.css
@@ -47,7 +47,7 @@
 		text-align: center;
 	}
 	.details th {
-		background: darkgray;
+		background: #434343;
 		color: #ffffff;
 	}
 	.td-center{
